tests/machine/x/kt/count_builtin.kt
fun main() {
	println(count(listOf(1, 2, 3)))
}
